crates/brasa_errorset/tests/snapshots/errorset__declared_throws_tolerates_open_indirect_body.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  callThrough -> {} (open)
