crates/brasa_errorset/tests/snapshots/errorset__direct_and_transitive.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  readFile -> {IoError}
  loadAll -> {IoError}
  entry -> {IoError}
  boom -> {string}
