crates/brasa_errorset/tests/snapshots/errorset__e001_top_level_unreachable_wildcard.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E001] Error: `_` is unreachable: every error is already handled
    ╭─[ e001_top_level_unreachable_wildcard.brs:15:3 ]
    │
 15 │   _ => "unreachable"
    │   ┬  
    │   ╰── `_` can never match here
────╯
