crates/brasa_errorset/tests/snapshots/errorset__e001_unreachable_arms.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E001] Error: unreachable `catch` arm: `ParseError` is not in the error-set here
    ╭─[ e001_unreachable_arms.brs:19:5 ]
    │
 19 │     ParseError => "never thrown"
    │     ─────┬────  
    │          ╰────── this expression cannot throw `ParseError`
────╯
[E001] Error: unreachable `catch` arm: `ParseError` is not in the error-set here
    ╭─[ e001_unreachable_arms.brs:27:5 ]
    │
 27 │     ParseError => "never thrown"
    │     ─────┬────  
    │          ╰────── this expression cannot throw `ParseError`
────╯
[E001] Error: `_` is unreachable: every error is already handled
    ╭─[ e001_unreachable_arms.brs:34:5 ]
    │
 34 │     _ => "unreachable"
    │     ┬  
    │     ╰── `_` can never match here
────╯
