crates/brasa_errorset/tests/snapshots/errorset__e002_catch_all_missing_native_error.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E002] Error: catch_all does not handle `string.ParseError`
    ╭─[ e002_catch_all_missing_native_error.brs:14:3 ]
    │
 14 │ ╭─▶   parse(s) catch_all (e)
    ┆ ┆   
 16 │ ├─▶   end
    │ │           
    │ ╰─────────── add arms or `_`
────╯
