crates/brasa_errorset/tests/snapshots/errorset__e002_catch_bang_missing_native_error.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: rendered
---
[E002] Error: catch! does not handle `string.ParseError`
    ╭─[ e002_catch_bang_missing_native_error.bras:14:3 ]
    │
 14 │ ╭─▶   parse(s) catch! (e)
    ┆ ┆   
 16 │ ├─▶   end
    │ │           
    │ ╰─────────── add arms or `_`
────╯
